k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: frontend.kind.cluster
    http:
      paths:
      - path: /primario
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /secundario
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
